force-app/main/default/objects/Projects__c/Projects__c.object-meta.xml
<CustomObject>
    <description>SM - The object is to manage and track DIR's Projects life cycle.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>