force-app/main/default/objects/Projects__c/fields/Number_of_Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Tasks__c</fullName>
    <label>Completed Tasks</label>
    <summaryFilterItems>
        <field>Project_Task__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>