force-app/main/default/objects/Projects__c/fields/Release_Item_Task__c.field-meta.xml
<CustomField>
    <fullName>Release_Item_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Item Task</label>
    <referenceTo>Release_Task__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>