force-app/main/default/objects/Projects__c/fields/Sharepoint_Project_Folder__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Project_Folder__c</fullName>
    <label>Sharepoint Project Folder</label>
    <type>Url</type>
</CustomField>