force-app/main/default/objects/Projects__c/fields/Technical_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Technical_Documentation__c</fullName>
    <label>Technical Documentation</label>
    <type>Url</type>
</CustomField>