force-app/main/default/objects/Projects__c/fields/Total_Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Tasks__c</fullName>
    <label>Total Number of Tasks</label>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>