force-app/main/default/objects/Projects__c/recordTypes/Long_Term_Projects.recordType-meta.xml
<RecordType>
    <fullName>Long_Term_Projects</fullName>
    <active>true</active>
    <label>Long Term Projects</label>
</RecordType>